idea/testData/multiplatform/aliasesTypeMismatch/commonLibrary/lib.kt
public expect open class <!LINE_MARKER("descr='Is subclassed by MyCancelException [common] MyIllegalStateException [commonLibrary] OtherException [common]'"), LINE_MARKER("descr='Has actuals in JVM'")!>MyException<!>

public expect open class <!LINE_MARKER("descr='Is subclassed by MyCancelException [common] OtherException [common]'"), LINE_MARKER("descr='Has actuals in JVM'")!>MyIllegalStateException<!> : MyException